openshift/k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stack-hub-index
  labels:
    app: stack-hub-index
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stack-hub-index
  template:
    metadata:
      labels:
        app: stack-hub-index
      annotations:
        date: "DATE"
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: stack-hub-index
      containers:
      - name: nginx
        image: NGINX_IMAGE
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        command: ['/bin/sh']
        args:
          - -cex
          - |
            export EXTERNAL_URL=$(cat /usr/share/stack-hub/route)
            /opt/startup.sh
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/stack-hub
      volumes:
      - name: shared-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: stack-hub-index
  labels:
    app: stack-hub-index
spec:
  type: ClusterIP
  selector:
    app: stack-hub-index
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: stack-hub-index
spec:
  to:
    kind: Service
    name: stack-hub-index
